fix spacing on header and style

--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,12 @@ header {
     margin-bottom: 2px;
 }
 
+.subtitle-position {
+    font-size: 1rem;
+    font-weight: 500;
+    margin-top: 0;
+}
+
 .year {
     font-size: 0.7rem;
     color: var(--text-muted);
